<resources>
    <string name="app_name">Pet Project</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="drawer_group_plants">Toxicity of plants</string>
    <string name="drawer_group_more">More</string>
    <string name="drawer_menu_cats">Cats</string>
    <string name="drawer_menu_dogs">Dogs</string>
    <string name="drawer_menu_about">About</string>

    <string name="menu_search">Search</string>
    `
    <string name="title_fragment_plants_cats">Dangerous Plants for Cats</string>
    <string name="title_fragment_plants_dogs">Dangerous Plants for Dogs</string>
    <string name="title_activity_about">About</string>

    <string name="plant_details_empty_image_description">Image is still loading</string>
    <string name="plant_details_scientific_name">Scientific Name: %1$s</string>
    <string name="plant_details_common_names">Other names: %1$s</string>
    <string name="plant_details_source">Source: %1$s</string>
    <string name="plant_details_family">Family: %1$s</string>
    <string name="plant_details_cat_dangerous">Dangerous for cats</string>
    <string name="plant_details_cat_safe">Safe for cats</string>
    <string name="plant_details_cat_unknown">Unknown for cats</string>
    <string name="plant_details_dog_dangerous">Dangerous for dogs</string>
    <string name="plant_details_dog_safe">Safe for dogs</string>
    <string name="plant_details_dog_unknown">Unknown for dogs</string>
    <string name="download_catalog_loading">We are retrieving the latest information. Please wait a few seconds…</string>
    <string name="plant_edit_scientific_name">Scientific Name:</string>
    <string name="plant_edit_main_name">Suggest a new plant</string>
    <string name="plant_edit_family">Family:</string>
    <string name="plant_edit_dangerous_dog">Dangerous for Dogs:</string>
    <string name="plant_edit_dangerous_cat">Dangerous for Cats:</string>
    <string name="plant_edit_safe">Safe</string>
    <string name="plant_edit_unknown">Unknown</string>
    <string name="plant_edit_dangerous">Dangerous</string>
    <string name="about_licence_flaticon">Icons made by <a href="https://www.flaticon.com/authors/freepik">freepik</a> from
        <a href="https://www.flaticon.com">www.flaticon.com</a>
    </string>
    <string name="banned_ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="plant_edit_send">Send</string>
    <string name="plant_edit_cancel">Cancel</string>
    <string name="leave_some_feedback">Report a problem</string>
</resources>
