<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item android:title="@string/drawer_group_plants">
        <menu>
            <group android:checkableBehavior="single">
            <item
                    android:id="@+id/nav_list_cat"
                    android:icon="@drawable/ic_cat"
                    android:title="@string/drawer_menu_cats"/>
            <item
                    android:id="@+id/nav_list_dog"
                    android:icon="@drawable/ic_dog"
                    android:title="@string/drawer_menu_dogs"/>
            </group>
        </menu>
    </item>
    <item android:title="@string/drawer_group_more">
        <menu>
            <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_info"
                    android:title="@string/drawer_menu_about"/>
        </menu>
    </item>
</menu>
