<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/plant_edit_view"
        style="@style/BaseContentLayout">
    <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/plant_edit_scientific_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"/>
            <EditText
                    android:id="@+id/plant_edit_family"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
                    android:ems="10" android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
            <EditText
                    android:id="@+id/plant_edit_main_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:ems="10" android:importantForAutofill="no"
                    android:inputType="textPersonName" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView3"/>
            <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView5">
                <RadioButton
                        android:id="@+id/plant_edit_cat_safe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/plant_edit_safe"/>
                <RadioButton
                        android:id="@+id/plant_edit_cat_undetermined"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:checked="true" android:text="@string/plant_edit_unknown"/>
                <RadioButton
                        android:id="@+id/plant_edit_cat_unsafe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/plant_edit_dangerous"/>
            </RadioGroup>
            <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6">
                <RadioButton
                        android:id="@+id/plant_edit_dog_safe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/plant_edit_safe"/>
                <RadioButton
                        android:id="@+id/plant_edit_dog_undetermined"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:checked="true" android:text="@string/plant_edit_unknown"/>
                <RadioButton
                        android:id="@+id/plant_edit_dog_unsafe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/plant_edit_dangerous"/>
            </RadioGroup>
            <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
                    android:text="@string/plant_edit_main_name"
                    android:textSize="@dimen/text_size_h2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
                    android:text="@string/plant_edit_scientific_name"
                    android:textSize="@dimen/text_size_h2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/plant_edit_scientific_name"/>
            <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
                    android:text="@string/plant_edit_family"
                    android:textSize="@dimen/text_size_h2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/plant_edit_family"/>
            <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
                    android:text="@string/plant_edit_dangerous_cat"
                    android:textSize="@dimen/text_size_h2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/plant_edit_main_name"/>
            <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="@dimen/text_size_h2"
                    android:text="@string/plant_edit_dangerous_dog"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/plant_edit_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/ic_save"/>
</FrameLayout>